--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "5434:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./db/schema:/docker-entrypoint-initdb.d/schema
+      - ./db/schema:/docker-entrypoint-initdb.d/
     restart: unless-stopped
 
   app:
