--- a/.air.toml
+++ b/.air.toml
@@ -5,6 +5,6 @@ tmp_dir = "tmp"
     bin = "my-app"
     full_bin = "APP_ENV=dev APP_USER=air ./my-app"
     include_ext = ["go", "templ", "sql"]
-    exclude_dir = ["tmp", "vendor"]
+    exclude_dir = ["tmp", "vendor", "db/sqlc"]
 [run]
     skip_init = true
